# cookiecutter-pypackage

./: pyproject.toml
