[tool]
[tool.poetry]
name = "cookiecutter-pypackage"
version = "1.1.1"
description = "Cookiecutter template for a Python package"
license = "BSD-3-Clause"
authors = ["Xie Wei <ampedee@gmail.com>"]
readme = "README.md"
repository = "https://github.com/chrisbc/cookiecutter-pypackage"
documentation = "https://chrisbc.github.io/cookiecutter-pypackage/"
keywords = ['cookiecutter', 'template', 'package']

include = [
  '{{cookiecutter.project_slug}}/**/*',
  'cookiecutter.json',
  'hooks/*'
]

[tool.poetry.dependencies]
python = ">=3.8,<4.0"
cookiecutter = "1.7.2"

[tool.poetry.dev-dependencies]
black  = { version = "^22.3"}
isort  = { version = "^5.8.0"}
flake8  = { version = "^3.9.2"}
flake8-docstrings = { version = "^1.6.0", optional = true }
mypy = {version = "^0.900"}
pytest = { version = "^6.2.4"}
pytest-cov  = { version = "^2.12.0"}
tox = { version = "^3.20.1"}
virtualenv  = { version = "^20.2.2", optional = true}
pip  = { version = "^20.3.1", optional = true}

mkdocs  = { version = "^1.1.2"}
mkdocs-include-markdown-plugin  = { version = "^1.0.0"}
mkdocs-material  = { version = "^6.1.7"}
mkdocstrings  = { version = "^0.18.0"}
mkdocs-material-extensions  = { version = "^1.0.1"}
mkdocs-autorefs = {version = "^0.3.1"}
mkdocstrings-python = {version = "^0.6.5"}
mkdocs-pymdownx-material-extras = "^2.0.3"
pymdown-extensions = {version = "^9.4"}

twine  = { version = "^3.3.0"}

pre-commit = {version = "^2.12.0", optional = true}
toml = {version = "^0.10.2", optional = true}
bump2version = {version = "^1.0.1"}
jinja2 = {version = "3.0.3"}

[tool.poetry.extras]
dev = [
  "pytest",
  "pytest-cookies",
  "pyyaml",
  "mkdocs",
  "mkdocs-material",
  "mkdocs-material-extensions",
  "pytest-cov",
  "tox",
  "mkdocs-include-markdown-plugin",
  "click"
]

[tool.black]
line-length = 88
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
